Make sure the attribution doesn't overflow the screen at the 768 breakpoint

--- a/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
@@ -289,6 +289,7 @@
 		position: absolute;
 		right: 0;
 		bottom: 0;
+		max-width: 369px; // For the 768 breakpoint. Everything else constrains this properly
 	}
 	.slick-slide.slick-current {
 		opacity: 1;
